--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatApp",
+  "name": "chatapp",
   "version": "1.0.0",
   "description": "social web app using node",
   "main": "index.js",
